Applet viewer can accept file paths as parameters now
svn path=/harmony/enhanced/jdktools/trunk/; revision=607324